@@ -1,4 +1,4 @@
-/* $Id: fetch-imap.c,v 1.80 2007-09-18 20:26:22 nicm Exp $ */
+/* $Id: fetch-imap.c,v 1.81 2008-03-06 08:06:05 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -127,9 +127,12 @@ void
 fetch_imap_desc(struct account *a, char *buf, size_t len)
 {
 	struct fetch_imap_data	*data = a->data;
+	char			*folders;
 
+	folders = fmt_strings("folders ", data->folders);
 	xsnprintf(buf, len,
-	    "imap%s server \"%s\" port %s user \"%s\" folder \"%s\"",
+	    "imap%s server \"%s\" port %s user \"%s\" %s",
 	    data->server.ssl ? "s" : "", data->server.host, data->server.port,
-	    data->user, data->folder);
+	    data->user, folders);
+	xfree(folders);
 }
