@@ -1,3 +1,8 @@
+06 March 2008
+
+* Support multiple folders (folders { "a" "b" }) on IMAP fetching. Requested by
+  Claudio Alessi.
+
 05 March 2008
 
 * Print current progress on SIGINFO. Be careful with this, it is possible
@@ -798,4 +803,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.186 2008-03-06 07:26:25 nicm Exp $
+$Id: CHANGES,v 1.187 2008-03-06 08:06:02 nicm Exp $
